--- a/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.Test/Antelcat.DependencyInjection.Autowired.Test.csproj
+++ b/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.Test/Antelcat.DependencyInjection.Autowired.Test.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.4.23259.5" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
