--- a/src/Antelcat.DependencyInjection.Autowired.ServerTest/Antelcat.DependencyInjection.Autowired.ServerTest.csproj
+++ b/src/Antelcat.DependencyInjection.Autowired.ServerTest/Antelcat.DependencyInjection.Autowired.ServerTest.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Antelcat.AspNetCore.DependencyInjection.Autowired\Antelcat.AspNetCore.DependencyInjection.Autowired.csproj" />
+    </ItemGroup>
+
 </Project>
