--- a/src/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.csproj
+++ b/src/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.csproj
@@ -5,20 +5,30 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
-        <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <Version>2.1.0</Version>
         <Title>Antelcat.DependencyInjection.Autowired</Title>
         <Authors>Antelcat</Authors>
         <Description>Expand native DI with property and field injection</Description>
         <PackageProjectUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired/blob/main/LICENSE</PackageLicenseUrl>
+        <PackageLicenseUrl></PackageLicenseUrl>
         <RepositoryUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired.git</RepositoryUrl>
         <PackageReleaseNotes>Initial</PackageReleaseNotes>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageIcon>Icon.png</PackageIcon>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
     <ItemGroup>
         <InternalsVisibleTo Include="Antelcat.AspNetCore.DependencyInjection.Autowired" />
+        <None Include="..\..\docs\Icon.png">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\..\LICENSE">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+        </None>
         <None Include="..\..\README.md">
           <Pack>True</Pack>
           <PackagePath>\</PackagePath>
