--- a/src/Antelcat.DependencyInjection.Autowired.Test/Antelcat.DependencyInjection.Autowired.Test.csproj
+++ b/src/Antelcat.DependencyInjection.Autowired.Test/Antelcat.DependencyInjection.Autowired.Test.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Antelcat.DependencyInjection.Autowired\Antelcat.DependencyInjection.Autowired.csproj" />
+      <ProjectReference Include="..\Antelcat.AspNetCore.DependencyInjection.Autowired\Antelcat.AspNetCore.DependencyInjection.Autowired.csproj" />
     </ItemGroup>
 
 </Project>
