--- a/src/Antelcat.AspNetCore.DependencyInjection.Autowired/Antelcat.AspNetCore.DependencyInjection.Autowired.csproj
+++ b/src/Antelcat.AspNetCore.DependencyInjection.Autowired/Antelcat.AspNetCore.DependencyInjection.Autowired.csproj
@@ -1,19 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Antelcat.AspNetCore.DependencyInjection.Autowired</Title>
-    <Version>7.0.0</Version>
+    <Version>7.0.1</Version>
     <Company>Antelcat</Company>
     <Authors>Antelcat</Authors>
-    <Description>Expand native DI with property and field injection for aspnetcore</Description>
+    <Description>Expand native Dependency Injection with property and field injection for aspnetcore</Description>
     <PackageProjectUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired.git</RepositoryUrl>
-    <PackageReleaseNotes>Initial</PackageReleaseNotes>
+    <PackageReleaseNotes>Reference to 2.1.1 version of Antelcat.DependencyInjection.Autowired</PackageReleaseNotes>
     <PackageIcon>Icon.png</PackageIcon>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
