--- a/src/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.csproj
+++ b/src/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.csproj
@@ -6,14 +6,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <Version>2.1.0</Version>
+        <Version>2.1.1</Version>
         <Title>Antelcat.DependencyInjection.Autowired</Title>
         <Authors>Antelcat</Authors>
-        <Description>Expand native DI with property and field injection</Description>
+        <Description>Expand native Dependency Injection with property and field injection</Description>
         <PackageProjectUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired</PackageProjectUrl>
-        <PackageLicenseUrl></PackageLicenseUrl>
         <RepositoryUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired.git</RepositoryUrl>
-        <PackageReleaseNotes>Initial</PackageReleaseNotes>
+        <PackageReleaseNotes>Fix collection resolve unautowired</PackageReleaseNotes>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>Icon.png</PackageIcon>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
