--- a/src/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.csproj
+++ b/src/Antelcat.DependencyInjection.Autowired/Antelcat.DependencyInjection.Autowired.csproj
@@ -35,9 +35,9 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.0" />
     </ItemGroup>
 
-    <Import Project="..\..\extern\Antelcat.Shared\Antelcat.Shared\Antelcat.Shared.DependencyInjection.Autowired\Antelcat.Shared.DependencyInjection.Autowired.projitems" Label="Shared" />
-    <Import Project="..\..\extern\Antelcat.Shared\Antelcat.Shared\Antelcat.Shared.Runtime.CompileService\Antelcat.Shared.Runtime.CompileService.projitems" Label="Shared" />
-    <Import Project="..\..\extern\Antelcat.Shared\Antelcat.Shared\Antelcat.Shared.IL\Antelcat.Shared.IL.projitems" Label="Shared" />
-    <Import Project="..\..\extern\Antelcat.Shared\Antelcat.Shared\Antelcat.Shared.Extensions.LinqExtension\Antelcat.Shared.Extensions.LinqExtension.projitems" Label="Shared" />
+    <Import Project="..\..\extern\Antelcat.Shared\src\Shared\Runtime.CompileService\Antelcat.Shared.Runtime.CompileService.projitems" Label="Shared" />
+    <Import Project="..\..\extern\Antelcat.Shared\src\Shared\DependencyInjection.Autowired\Antelcat.Shared.DependencyInjection.Autowired.projitems" Label="Shared" />
+    <Import Project="..\..\extern\Antelcat.Shared\src\Shared\IL\Antelcat.Shared.IL.projitems" Label="Shared" />
+    <Import Project="..\..\extern\Antelcat.Shared\src\Shared\Extensions\LinqExtension\Antelcat.Shared.Extensions.LinqExtension.projitems" Label="Shared" />
 
 </Project>
