--- a/src/Antelcat.AspNetCore.DependencyInjection.Autowired/Antelcat.AspNetCore.DependencyInjection.Autowired.csproj
+++ b/src/Antelcat.AspNetCore.DependencyInjection.Autowired/Antelcat.AspNetCore.DependencyInjection.Autowired.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;netcoreapp3.0;netcoreapp3.1;net5.0;net6.0;net7.0;</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Antelcat.AspNetCore.DependencyInjection.Autowired</Title>
-    <Version>7.0.1</Version>
+    <Version>7.0.2</Version>
     <Company>Antelcat</Company>
     <Authors>Antelcat</Authors>
     <Description>Expand native Dependency Injection with property and field injection for aspnetcore</Description>
     <PackageProjectUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Antelcat/Antelcat.DependencyInjection.Autowired.git</RepositoryUrl>
-    <PackageReleaseNotes>Reference to 2.1.1 version of Antelcat.DependencyInjection.Autowired</PackageReleaseNotes>
+    <PackageReleaseNotes>Supports multiple NET versions</PackageReleaseNotes>
     <PackageIcon>Icon.png</PackageIcon>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
